@@ -9,7 +9,6 @@
 \usage{
 HTMLdecode(x)
 }
-%- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{x}{
     character
